--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         
        <section class="w-75 m-auto">
         <div class="container my-5">
-            <h1 class="mx-4 my-5">Bookmarker</h1>
+            <h1 class="mx-4 my-5">Bookmarker
+                <span>Github</span>
+            </h1>
             <div class="line my-3">
            
             </div>
